--- a/index.html
+++ b/index.html
@@ -1,10 +1,147 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>[Your Name] - CV</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header img {
+      border-radius: 50%;
+      width: 120px;
+      margin-bottom: 15px;
+    }
+    header h1 {
+      margin: 10px 0;
+      font-size: 2em;
+    }
+    header p {
+      margin: 0;
+      font-style: italic;
+    }
+    section {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    section h2 {
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+      margin-bottom: 15px;
+      color: #2c3e50;
+    }
+    .job, .edu {
+      margin-bottom: 15px;
+    }
+    .job h3, .edu h3 {
+      margin: 0;
+      font-size: 1.1em;
+      color: #34495e;
+    }
+    .job span, .edu span {
+      font-size: 0.9em;
+      color: #777;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      background: #ecf0f1;
+      margin-top: 30px;
+    }
+    .links a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #2c3e50;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="https://via.placeholder.com/120" alt="Profile Picture">
+    <h1>[Your Name]</h1>
+    <p>Software Engineer | Web Developer | Problem Solver</p>
+    <div class="links">
+      <a href="mailto:you@example.com">Email</a> |
+      <a href="https://github.com/yourusername">GitHub</a> |
+      <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
+    </div>
+  </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>
+      Motivated and detail-oriented software engineer with a passion for building 
+      scalable applications, solving complex problems, and continuously learning 
+      new technologies.
+    </p>
+  </section>
+
+  <section>
+    <h2>Experience</h2>
+    <div class="job">
+      <h3>Software Developer - XYZ Corp</h3>
+      <span>Jan 2022 – Present | Remote</span>
+      <p>
+        - Developed web applications using React and Node.js. <br>
+        - Improved application performance by 30%. <br>
+        - Collaborated with cross-functional teams in Agile sprints.
+      </p>
+    </div>
+    <div class="job">
+      <h3>Intern - ABC Solutions</h3>
+      <span>Jun 2021 – Dec 2021 | City</span>
+      <p>
+        - Built automation scripts in Python. <br>
+        - Assisted in database design and optimization.
+      </p>
+    </div>
+  </section>
+
+  <section>
+    <h2>Education</h2>
+    <div class="edu">
+      <h3>B.Sc. in Computer Science - University Name</h3>
+      <span>2018 – 2022</span>
+    </div>
+  </section>
+
+  <section>
+    <h2>Skills</h2>
+    <p>
+      JavaScript (React, Node.js), Python, HTML, CSS, Git, SQL, Docker, AWS
+    </p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Portfolio Website:</strong> Personal site showcasing projects and skills.</li>
+      <li><strong>Task Manager App:</strong> A full-stack MERN app for managing daily tasks.</li>
+      <li><strong>API Integrator:</strong> Python-based tool to connect multiple APIs for analytics.</li>
+    </ul>
+  </section>
+
+  <footer>
+    &copy; 2025 [Your Name]. Built with ❤️ and hosted on GitHub Pages.
+  </footer>
+
+</body>
 </html>
