--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[Your Name] - CV</title>
+  <title>Shpend Lutfiu</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -70,47 +70,87 @@
       color: #2c3e50;
       font-weight: bold;
     }
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
   </style>
 </head>
 <body>
 
   <header>
-    <img src="https://via.placeholder.com/120" alt="Profile Picture">
-    <h1>[Your Name]</h1>
-    <p>Software Engineer | Web Developer | Problem Solver</p>
-    <div class="links">
-      <a href="mailto:you@example.com">Email</a> |
-      <a href="https://github.com/yourusername">GitHub</a> |
-      <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
+    <img src="SHL.png" alt="Profile Picture">
+    <h1>Shpend Lutfiu, PhD</h1>
+    <p>Lecturer & Reseacher in Cybersecurity</p>
+<div>
+      <a href="mailto:you@example.com">shpend.lutfiu@aab-edu.net</a> |
+      <a href="https://shlutfiu.github.io/">shlutfiu.github.io</a> |
+      <a href="https://x.com/shpendlutfiu">https://x.com/shpendlutfiu</a>
     </div>
   </header>
 
   <section>
     <h2>About Me</h2>
     <p>
-      Motivated and detail-oriented software engineer with a passion for building 
-      scalable applications, solving complex problems, and continuously learning 
-      new technologies.
+     During my education in the field of computer science and many years of experience in Information
+Technology, I realized that Cyber ​​Security is today the most challenging field. The year 2016 was a turning
+point when I began to actively engage in this field with the establishment of the National Cyber ​​Security Unit
+(KOS-CERT) based on the legislation in force which states that ARKEP should also perform the functions
+of the Computer Emergency Response Center to deal with cyber threats in public electronic communication
+networks and services.
+<p>Although challenging, this unit was created step by step by developing technical and legal capacities based on
+best practices and projects implemented by international organizations. Now KOS-CERT performs its
+functions at the national level and is also internationally recognized by being accredited in the TF-CSIRT. In
+recent years, Kosovo has made efforts to complete the legal framework in the field of cybersecurity, where I
+was part of the working groups in the drafting of the first National Cybersecurity Strategy and Action Plan
+and later in the drafting of the Law on Cybersecurity, and other secondary legislation. Being a member of the
+National Cybersecurity Council, my contribution within this council is in making important decisions related
+to cybersecurity at the national level.</p>
+My commitment to this field has also continued in the academic aspect, having been engaged as a professor at
+AAB College for more than 12 years, as well as continuing my academic advancement in obtaining my
+Doctorate degree.
     </p>
   </section>
 
   <section>
     <h2>Experience</h2>
     <div class="job">
-      <h3>Software Developer - XYZ Corp</h3>
-      <span>Jan 2022 – Present | Remote</span>
+      <h3>High officer for Network Security - National Unit for Cyber Security (KOS-CERT)</h3>
+      <span>01/12/2014 – Present</span>
       <p>
-        - Developed web applications using React and Node.js. <br>
-        - Improved application performance by 30%. <br>
-        - Collaborated with cross-functional teams in Agile sprints.
+      - Incident Response: Handling, investigating, and mitigating cyber incidents effectively. <br>
+      - Incident Coordination: Aligning response strategies across stakeholders and organizations at national scale.<br>
+      - Awareness Building: Designing and delivering cybersecurity awareness campaigns, training, and workshops.
       </p>
     </div>
     <div class="job">
-      <h3>Intern - ABC Solutions</h3>
-      <span>Jun 2021 – Dec 2021 | City</span>
+      <h3>Lecturer – AAB Collage</h3>
+      <span>01/10/2012  – Present</span>
       <p>
-        - Built automation scripts in Python. <br>
-        - Assisted in database design and optimization.
+        - Basics of Programming. <br>
+        - System Programming <br>
+        - Operating Systems <br>
+	- Web Programming<br>
+	- Basics of Informatics and Digital Circuits<br>
+	- Advance Software Engineering<br>
+	- Digital Forensics<br>
+	- OS Unix/Linux
       </p>
     </div>
   </section>
@@ -118,24 +158,41 @@
   <section>
     <h2>Education</h2>
     <div class="edu">
-      <h3>B.Sc. in Computer Science - University Name</h3>
-      <span>2018 – 2022</span>
+      <h3>Doctor of Informatics - "St. Cyril and St. Methodius" University of Veliko Tarnovo</h3>
+      <span>2020 – 2024</span>
+	<p><b>Field of study:</b> Informatics and computer sciences</p>
+	<p><b>Thesis:</b> Public and private cooperation in early prevention of cyber threats and exchange of information 	among relevant stakeholders</p>
+	
+    </div>
+<div class="edu">
+      <h3>MASTER OF COMPUTER SCIENCE  - University of Prishtina - Faculty of Electrical and Computer Engineering</h3>
+      <span>2008 – 2012</span>
+	<p><b>Field of study:</b> Computer Sciences</p>
+	<p><b>Thesis:</b>Optimizing execution speed of parallel application in computers with Multicore Microprocessor using OpenMP interface</p>
+	
+    </div>
+<div class="edu">
+      <h3>GRADUATED ELECTROTECHNICAL ENGINEER – University of Prishtina - Faculty of Electrical and Computer Engineering</h3>
+      <span>1994 – 2006</span>
+	<p><b>Field of study:</b> Automatics and Electronics </p>
+	<p><b>Thesis:</b> Memory realizations principles</p>
+	
     </div>
   </section>
 
   <section>
     <h2>Skills</h2>
     <p>
-      JavaScript (React, Node.js), Python, HTML, CSS, Git, SQL, Docker, AWS
+      Programming: Python, Java, SQL, C   | Linux Operative Systems | CISCO CCNA   Network administration / Network security / Network maintenance
     </p>
   </section>
 
   <section>
-    <h2>Projects</h2>
+    <h2>Publications</h2>
     <ul>
-      <li><strong>Portfolio Website:</strong> Personal site showcasing projects and skills.</li>
-      <li><strong>Task Manager App:</strong> A full-stack MERN app for managing daily tasks.</li>
-      <li><strong>API Integrator:</strong> Python-based tool to connect multiple APIs for analytics.</li>
+      <li><strong>Cyber Risk Assessment Principles for Modern Digital Museums: </strong>https://dipp.math.bas.bg/dipp/article/view/dipp.2022.12.20 – 2022</li>
+<li><strong>Cyber Security Issues in Online Education: </strong>https://library.iated.org/view/TODOROV2022CYB – 2022</li>
+      <li><strong>Exchanging the Cybersecurity Information through Public and Private Partnership: </strong>http://www.math.bas.bg/vt/stemedu/paper.php?lang=en&vol=03&paper=14 – 2021 </li>
     </ul>
   </section>
 
