--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a:active {
 <body>
 
   <header>
-    <img src="SHL.png" alt="Profile Picture">
+    <img src="ShL.png" alt="Profile Picture">
     <h1>Shpend Lutfiu, PhD</h1>
     <p>Lecturer & Reseacher in Cybersecurity</p>
 <div>
