--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ a:active {
   <header>
     <img src="ShL.png" alt="Profile Picture">
     <h1>Shpend Lutfiu, PhD</h1>
-    <p>Lecturer & Reseacher in Cybersecurity</p>
+    <p>Lecturer & Researcher in Cybersecurity</p>
 <div>
       <a href="mailto:you@example.com">shpend.lutfiu@aab-edu.net</a> |
       <a href="https://shlutfiu.github.io/">shlutfiu.github.io</a> |
@@ -131,16 +131,16 @@ Doctorate degree.
   <section>
     <h2>Experience</h2>
     <div class="job">
-      <h3>High officer for Network Security - National Unit for Cyber Security (KOS-CERT)</h3>
+      <h3>High Officer for Network Security - National Unit for Cyber Security (KOS-CERT)</h3>
       <span>01/12/2014 – Present</span>
       <p>
-      - Incident Response: Handling, investigating, and mitigating cyber incidents effectively. <br>
-      - Incident Coordination: Aligning response strategies across stakeholders and organizations at national scale.<br>
-      - Awareness Building: Designing and delivering cybersecurity awareness campaigns, training, and workshops.
+      <b>Incident Response:</b> Handling, investigating, and mitigating cyber incidents effectively. <br>
+      <b>Incident Coordination:</b> Aligning response strategies across stakeholders and organizations at national scale.<br>
+      <b>Awareness Building:</b> Designing and delivering cybersecurity awareness campaigns, training, and workshops.
       </p>
     </div>
     <div class="job">
-      <h3>Lecturer – AAB Collage</h3>
+      <h3>Lecturer – AAB College</h3>
       <span>01/10/2012  – Present</span>
       <p>
         - Basics of Programming. <br>
@@ -167,8 +167,8 @@ Doctorate degree.
 <div class="edu">
       <h3>MASTER OF COMPUTER SCIENCE  - University of Prishtina - Faculty of Electrical and Computer Engineering</h3>
       <span>2008 – 2012</span>
-	<p><b>Field of study:</b> Computer Sciences</p>
-	<p><b>Thesis:</b>Optimizing execution speed of parallel application in computers with Multicore Microprocessor using OpenMP interface</p>
+	<p><b>Field of study:</b> Computer Science</p>
+	<p><b>Thesis:</b> Optimizing execution speed of parallel application in computers with Multicore Microprocessor using OpenMP interface</p>
 	
     </div>
 <div class="edu">
@@ -197,7 +197,7 @@ Doctorate degree.
   </section>
 
   <footer>
-    &copy; 2025 [Your Name]. Built with ❤️ and hosted on GitHub Pages.
+    &copy; 2025 Shpend Lutfiu. 
   </footer>
 
 </body>
